--- a/src/app/views/pagInicial.marko
+++ b/src/app/views/pagInicial.marko
@@ -26,7 +26,7 @@
         </ul>
       </nav>
       <img src="res/mapamundi.png" style="width:100%">
-
+      <img src="res/pin.png" class="rpin" id="pin-amsul" style="width: 2%;">    
 
     <!--
       <div id="googleMap" style="width:100%;height:400px;"></div>
