--- a/src/app/views/pagInicial.marko
+++ b/src/app/views/pagInicial.marko
@@ -3,30 +3,36 @@
 <head>
     <title>Avemturismo</title>
     <!-- Aqui chamamos o nosso arquivo css externo -->
-   <link rel="stylesheet" type="text/css"  href="/css/estilo.css" />
-   <link rel="shortcut icon" href="res/mapamundi_logo.png" type="image/x-icon" />
+    <link rel="stylesheet" type="text/css"  href="/estatico/css/estilo.css" />
+    <link rel="shortcut icon" href="/estatico/res/mapamundi_logo.png" type="image/x-icon" />
 
 </head>
 <body>
-  <audio controls id="player">
-    <source src="/res/misica.mp3" type="audio/mpeg">
+  <!--<audio controls id="player">
+    <source src="res/misica.mp3" type="audio/mpeg">
   Seu browser não suporta este player.
-  </audio>
+  </audio>-->
     <nav>
         <ul class="menu">
               <li><a href="#">Home</a></li>
               <li><a href="pagSobre.html">Sobre</a></li>
                     <li><a href="#">Qual era deseja ir?</a>
                        <ul>
-                            <li><a href="pagModernidade.html">Modernidade</a></li>
-                            <li><a href="pagAntiguidade.html">Antiguidade</a></li>
+                            <li><a href="/estatico/pagModernidade.marko">Modernidade</a></li>
+                            <li><a href="/estatico/pagAntiguidade.marko">Antiguidade</a></li>
                         </ul>
                   </li>
               <li><a href="#">Contato</a></li>
         </ul>
       </nav>
-      <img src="res/mapamundi.png" style="width:100%">
-      <img src="res/pin.png" class="rpin" id="pin-amsul" style="width: 2%;">    
+      <img src="/estatico/res/mapamundi.png" style="width:100%">
+      <img src="/estatico/res/pin.png" class="rpin" id="pin-amsul" style="width: 2%;"> 
+      <img src="/estatico/res/pin.png" class="rpin" id="pin-amnorte" style="width: 2%;"> 
+      <img src="/estatico/res/pin.png" class="rpin" id="pin-amcen" style="width: 2%;"> 
+      <img src="/estatico/res/pin.png" class="rpin" id="pin-eu" style="width: 2%;"> 
+      <img src="/estatico/res/pin.png" class="rpin" id="pin-asia" style="width: 2%;"> 
+      <img src="/estatico/res/pin.png" class="rpin" id="pin-oce" style="width: 2%;"> 
+      <img src="/estatico/res/pin.png" class="rpin" id="pin-afri" style="width: 2%;"> 
 
     <!--
       <div id="googleMap" style="width:100%;height:400px;"></div>
