--- a/src/app/views/pagModernidade.marko
+++ b/src/app/views/pagModernidade.marko
@@ -2,8 +2,8 @@
 <html lang="br">
 <head>
     <title>Avemturismo</title>
-    <link rel="stylesheet" type="text/css"  href="views/css/estilo.css" />
-    <link rel="shortcut icon" href="res/mapamundi_logo.png" type="image/x-icon" />
+    <link rel="stylesheet" type="text/css"  href="/estatico/css/estilo.css" />
+   <link rel="shortcut icon" href="/estatico/res/mapamundi_logo.png" type="image/x-icon" />
 </head>
 <style>
 *{margin: 0; padding: 0;}
@@ -66,17 +66,17 @@ body{
     <nav>
         <ul class="menu">
               <li><a href="#">Home</a></li>
-              <li><a href="pagSobre.html">Sobre</a></li>
+              <li><a href="/estatico/pagSobre.marko">Sobre</a></li>
                     <li><a href="#">Qual era deseja ir?</a>
                        <ul>
-                            <li><a href="pagModernidade.html">Modernidade</a></li>
-                            <li><a href="pagAntiguidade.html">Antiguidade</a></li>
+                            <li><a href="/estatico/pagModernidade.marko">Modernidade</a></li>
+                            <li><a href="/estatico/pagAntiguidade.marko">Antiguidade</a></li>
                         </ul>
                   </li>
               <li><a href="#">Contato</a></li>
         </ul>
     </nav>
-    <img src="res/mapamundi.png" style="width:100%">
+    <img src="/estatico/res/mapamundi.png" style="width:100%">
 
       
     <!--
