--- a/src/app/views/pagAntiguidade.marko
+++ b/src/app/views/pagAntiguidade.marko
@@ -3,8 +3,8 @@
 <head>
     <title>Avemturismo</title>
     <!-- Aqui chamamos o nosso arquivo css externo -->
-   <link rel="stylesheet" type="text/css"  href="views/css/estilo.css" />
-   <link rel="shortcut icon" href="res/mapamundi_logo.png" type="image/x-icon" />
+    <link rel="stylesheet" type="text/css"  href="/estatico/css/estilo.css" />
+    <link rel="shortcut icon" href="/estatico/res/mapamundi_logo.png" type="image/x-icon" />
 
 </head>
 <style>
@@ -88,7 +88,7 @@ body{
               <li><a href="#">Contato</a></li>
         </ul>
       </nav>
-      <img src="res/mapamundi.png" style="width:100%">
+      <img src="/estatico/res/mapamundi.png" style="width:100%">
 
       
     <!--
