Mudanças e criação das páginas dos continentes restantes

--- a/src/app/views/css/estilo.css
+++ b/src/app/views/css/estilo.css
@@ -224,6 +224,98 @@ body{
     bottom: 40.9282%;
     left: 35.7994%;
   }
+  #pin-cuba{
+    bottom: 59.9282%;
+    left: 42.7994%;
+  }
+  #pin-cari{
+    bottom: 25.9282%;
+    left: 37.7994%;
+  }
+  #pin-eua{
+    bottom: 36.9282%;
+    left: 50.7994%;
+  }
+  #pin-cana{
+    bottom: 63.9282%;
+    left: 47.7994%;
+  }
+  #pin-mex{
+    bottom: 14.9282%;
+    left: 46.7994%;
+  }
+  #pin-aus{
+    bottom: 35.9282%;
+    left: 39.7994%;
+  }
+  #pin-neo{
+    bottom: 14.9282%;
+    left: 72.7994%;
+  }
+  #pin-rus{
+    bottom: 80.9282%;
+    left: 50.7994%;
+  }
+  #pin-jap{
+    bottom: 52.9282%;
+    left: 74.7994%;
+  }
+  #pin-cor{
+    bottom: 52.9282%;
+    left: 67.7994%;
+  }
+  #pin-mongo{
+    bottom: 63.9282%;
+    left: 52.7994%;
+  }
+  #pin-caza{
+    bottom: 65.9282%;
+    left: 31.7994%;
+  }
+  #pin-afe{
+    bottom: 50.4282%;
+    left: 29.9994%;
+  }
+  #pin-ara{
+    bottom: 39.9282%;
+    left: 16.7994%;
+  }
+  #pin-emi{
+    bottom: 38.9282%;
+    left: 22.7994%;
+  }
+  #pin-iem{
+    bottom: 29.9282%;
+    left: 18.7994%;
+  }
+  #pin-vie{
+    bottom: 26.9282%;
+    left: 55.9994%;
+  }
+  #pin-laos{
+    bottom: 34.9282%;
+    left: 52.3994%;
+  }
+  #pin-cambo{
+    bottom: 25.9282%;
+    left: 53.7994%;
+  }
+  #pin-ira{
+    bottom: 48.9282%;
+    left: 15.9994%;
+  }
+  #pin-tur{
+    bottom: 55.9282%;
+    left: 10.7994%;
+  }
+  #pin-chi{
+    bottom: 50.9282%;
+    left: 52.7994%;
+  }
+  #pin-ind{
+    bottom: 34.9282%;
+    left: 37.7994%;
+  }
   body{
       background-color: cadetblue;
   }
