--- a/src/app/views/pagInicial.marko
+++ b/src/app/views/pagInicial.marko
@@ -16,10 +16,11 @@
         <ul class="menu">
               <li><a href="#">Home</a></li>
               <li><a href="pagSobre.html">Sobre</a></li>
-                    <li><a href="#">Qual era deseja ir?</a>
+                    <li><a href="#">Maravilhas do mundo</a>
                        <ul>
-                            <li><a href="/estatico/pagModernidade.marko">Modernidade</a></li>
-                            <li><a href="/estatico/pagAntiguidade.marko">Antiguidade</a></li>
+                            <li><a href="/estatico/pagModernidade.marko">Moderno</a></li>
+                            <li><a href="/estatico/pagAntiguidade.marko">Antigo</a></li>
+                            <li><a href="/estatico/pagNatural.marko">Natural</a></li>
                         </ul>
                   </li>
               <li><a href="#">Contato</a></li>
