--- a/src/app/views/pagAmSul.marko
+++ b/src/app/views/pagAmSul.marko
@@ -19,7 +19,7 @@
             <!--a class="rpin" id="pin-br"></a>-->
             <img src="/estatico/res/pin.png" class="rpin" id="pin-br" style="width: 2%;">
             <img src="/estatico/res/pin.png" class="rpin" id="pin-arg" style="width: 2%;">
-            <img src="/estatico/res/pin.png" class="rpin" id="pin-chi" style="width: 2%;">
+            <img src="/estatico/res/pin.png" class="rpin" id="pin-chile" style="width: 2%;">
             <img src="/estatico/res/pin.png" class="rpin" id="pin-peru" style="width: 2%;">
             <img src="/estatico/res/pin.png" class="rpin" id="pin-equa" style="width: 2%;">
             <img src="/estatico/res/pin.png" class="rpin" id="pin-gui" style="width: 2%;">
