--- a/src/app/views/pagAntiguidade.marko
+++ b/src/app/views/pagAntiguidade.marko
@@ -7,90 +7,34 @@
     <link rel="shortcut icon" href="/estatico/res/mapamundi_logo.png" type="image/x-icon" />
 
 </head>
-<style>
-*{margin: 0; padding: 0;}
-
-@font-face{
-    font-family: slkscr;
-    src: url(res/slkscr.ttf)
-}
-
-body{
-    font-family: slkscr;
-	font-size: 12px;
-}
-
-.menu{
-    position: fixed;
-    list-style:none; 
-    border:1px solid #c0c0c0; 
-    float:left; 
-    color:#fff;
-    background:white; 
-    text-shadow:0px 0px 5px #fff; 
-}
-
-#player{
-    position: fixed;
-    bottom: 0;
-}
-
-.menu li{
-    position:relative; 
-    float:left; 
-    border-right:1px solid #c0c0c0; 
-}
-
-.menu li a{
-    color:#333; 
-    text-decoration:none; 
-    padding:5px 10px; 
-    display:block;
-}
-
-.menu li a:hover{
-    background:#333; 
-    color:#fff;
-    text-shadow:0px 0px 5px #fff; 
-}
-
-.menu li ul{
-    position:absolute; 
-    top:25px; left:0;
-    background-color:#fff;
-    display:none; 
-}
-
-.menu li:hover ul, .menu li.over ul{display:block;}
-
-.menu li ul li{
-    border:1px solid #c0c0c0;
-     display:block;
-      width:150px;
-}
-
-</style>
 <body>
-  <audio controls id="player">
-    <source src="/res/misica.mp3" type="audio/mpeg">
+  <!--<audio controls id="player">
+    <source src="res/misica.mp3" type="audio/mpeg">
   Seu browser não suporta este player.
-  </audio>
+  </audio>-->
     <nav>
         <ul class="menu">
               <li><a href="#">Home</a></li>
               <li><a href="pagSobre.html">Sobre</a></li>
-                    <li><a href="#">Qual era deseja ir?</a>
+                    <li><a href="#">Maravilhas do mundo</a>
                        <ul>
-                            <li><a href="pagModernidade.html">Modernidade</a></li>
-                            <li><a href="pagAntiguidade.html">Antiguidade</a></li>
+                            <li><a href="/estatico/pagModernidade.marko">Moderno</a></li>
+                            <li><a href="/estatico/pagAntiguidade.marko">Antigo</a></li>
+                            <li><a href="/estatico/pagNatural.marko">Natural</a></li>
                         </ul>
                   </li>
               <li><a href="#">Contato</a></li>
         </ul>
       </nav>
       <img src="/estatico/res/mapamundi.png" style="width:100%">
+      <img src="/estatico/res/pin.png" class="rpin" id="pin-pira" style="width: 1%;"> 
+      <img src="/estatico/res/pin.png" class="rpin" id="pin-mausoleu" style="width: 1%;"> 
+      <img src="/estatico/res/pin.png" class="rpin" id="pin-zeus" style="width: 1%;"> 
+      <img src="/estatico/res/pin.png" class="rpin" id="pin-jardim" style="width: 1%;"> 
+      <img src="/estatico/res/pin.png" class="rpin" id="pin-farol" style="width: 1%;"> 
+      <img src="/estatico/res/pin.png" class="rpin" id="pin-artemis" style="width: 1%;"> 
+      <img src="/estatico/res/pin.png" class="rpin" id="pin-colosso" style="width: 1%;"> 
 
-      
     <!--
       <div id="googleMap" style="width:100%;height:400px;"></div>
 
@@ -107,4 +51,4 @@ body{
       <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDgtA30-vi9sCy4GbABqMi6xDu5hIOOCSM&callback=myMap"></script>
     -->
 </body>
-</html>
+</html> 
