--- a/src/app/views/pagNatural.marko
+++ b/src/app/views/pagNatural.marko
@@ -27,13 +27,13 @@
         </ul>
       </nav>
       <img src="/estatico/res/mapamundi.png" style="width:100%">
-      <img src="/estatico/res/pin.png" class="rpin" id="pin-cris" style="width: 2%;"> 
-      <img src="/estatico/res/pin.png" class="rpin" id="pin-itza" style="width: 2%;"> 
-      <img src="/estatico/res/pin.png" class="rpin" id="pin-macchu" style="width: 2%;"> 
-      <img src="/estatico/res/pin.png" class="rpin" id="pin-coliseu" style="width: 2%;"> 
-      <img src="/estatico/res/pin.png" class="rpin" id="pin-petra" style="width: 2%;"> 
-      <img src="/estatico/res/pin.png" class="rpin" id="pin-taj" style="width: 2%;"> 
-      <img src="/estatico/res/pin.png" class="rpin" id="pin-mura" style="width: 2%;"> 
+      <img src="/estatico/res/pin.png" class="rpin" id="pin-amazonia" style="width: 2%;"> 
+      <img src="/estatico/res/pin.png" class="rpin" id="pin-halong" style="width: 2%;"> 
+      <img src="/estatico/res/pin.png" class="rpin" id="pin-jeju" style="width: 2%;"> 
+      <img src="/estatico/res/pin.png" class="rpin" id="pin-komodo" style="width: 2%;"> 
+      <img src="/estatico/res/pin.png" class="rpin" id="pin-princesa" style="width: 2%;"> 
+      <img src="/estatico/res/pin.png" class="rpin" id="pin-iguaçu" style="width: 2%;"> 
+      <img src="/estatico/res/pin.png" class="rpin" id="pin-mesa" style="width: 2%;"> 
 
     <!--
       <div id="googleMap" style="width:100%;height:400px;"></div>
