backend das novas páginas

--- a/src/app/views/pagAmNorte.marko
+++ b/src/app/views/pagAmNorte.marko
@@ -10,7 +10,14 @@
     <div class="wrapper">
     <nav>
         <ul class="menu">
-              <li><a href="/estatico/pagInicial.marko">Home</a></li>
+              <li><a href="/pagInicial">Home</a></li>
+                    <li><a href="#">Maravilhas do mundo</a>
+                       <ul>
+                            <li><a href="/pagModernidade">Moderno</a></li>
+                            <li><a href="/pagAntiguidade">Antigo</a></li>
+                            <li><a href="/pagNatural">Natural</a></li>
+                        </ul>
+                  </li>
         </ul>
       </nav>
       <img src="/estatico/res/amnorte.png" style="width: 90%; height: 90%;">
