--- a/src/app/views/pagAntiguidade.marko
+++ b/src/app/views/pagAntiguidade.marko
@@ -14,16 +14,14 @@
   </audio>-->
     <nav>
         <ul class="menu">
-              <li><a href="#">Home</a></li>
-              <li><a href="pagSobre.html">Sobre</a></li>
+              <li><a href="/pagInicial">Home</a></li>
                     <li><a href="#">Maravilhas do mundo</a>
                        <ul>
-                            <li><a href="/estatico/pagModernidade.marko">Moderno</a></li>
-                            <li><a href="/estatico/pagAntiguidade.marko">Antigo</a></li>
-                            <li><a href="/estatico/pagNatural.marko">Natural</a></li>
+                            <li><a href="/pagModernidade">Moderno</a></li>
+                            <li><a href="/pagAntiguidade">Antigo</a></li>
+                            <li><a href="/pagNatural">Natural</a></li>
                         </ul>
                   </li>
-              <li><a href="#">Contato</a></li>
         </ul>
       </nav>
       <img src="/estatico/res/mapamundi.png" style="width:100%">
@@ -34,21 +32,5 @@
       <img src="/estatico/res/pin.png" class="rpin" id="pin-farol" style="width: 1%;"> 
       <img src="/estatico/res/pin.png" class="rpin" id="pin-artemis" style="width: 1%;"> 
       <img src="/estatico/res/pin.png" class="rpin" id="pin-colosso" style="width: 1%;"> 
-
-    <!--
-      <div id="googleMap" style="width:100%;height:400px;"></div>
-
-      <script>
-      function myMap() {
-      var mapProp= {
-        center:new google.maps.LatLng(51.508742,-0.120850),
-        zoom:5,
-      };
-      var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
-      }
-      </script>
-      
-      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDgtA30-vi9sCy4GbABqMi6xDu5hIOOCSM&callback=myMap"></script>
-    -->
 </body>
 </html> 
