Fiinalização das páginas e criação/atualização das rotas

--- a/src/app/views/css/estilo.css
+++ b/src/app/views/css/estilo.css
@@ -316,6 +316,46 @@ body{
     bottom: 34.9282%;
     left: 37.7994%;
   }
+  #pin-congo{
+    bottom: 49%;
+    left: 50%;
+  }
+  #pin-nigeria{
+    bottom: 61%;
+    left: 41%;
+  }
+  #pin-etio{
+    bottom: 61%;
+    left: 76%;
+  }
+  #pin-soma{
+    bottom: 60%;
+    left: 87%;
+  }
+  #pin-rua{
+    bottom: 47%;
+    left: 66%;
+  }
+  #pin-ango{
+    bottom: 33%;
+    left: 52%;
+  }
+  #pin-marro{
+    bottom: 91%;
+    left: 26%;
+  }
+  #pin-libia{
+    bottom: 84%;
+    left: 52%;
+  }
+  #pin-egito{
+    bottom: 84%;
+    left: 65%;
+  }
+  #pin-afrsul{
+    bottom: 11%;
+    left: 60%;
+  }
   #pin-cris{
     bottom: 27%;
     left: 33%;
