--- a/src/app/views/pagInicial.marko
+++ b/src/app/views/pagInicial.marko
@@ -26,7 +26,7 @@
       <img src="/estatico/res/mapamundi.png" style="width:100%">
       <a href="/pagAmSul"><img src="/estatico/res/pin.png" class="rpin" id="pin-amsul" style="width: 2%;"></a>
       <a href="/pagAmNorte"><img src="/estatico/res/pin.png" class="rpin" id="pin-amnorte" style="width: 2%;"></a> 
-      <img src="/estatico/res/pin.png" class="rpin" id="pin-amcen" style="width: 2%;" >
+      <a href="/pagAmCentral"><img src="/estatico/res/pin.png" class="rpin" id="pin-amcen" style="width: 2%;" ></a>
       <a href="/pagEuropa"><img src="/estatico/res/pin.png" class="rpin" id="pin-eu" style="width: 2%;"> </a>
       <a href="/pagAsia"><img src="/estatico/res/pin.png" class="rpin" id="pin-asia" style="width: 2%;"> </a>
       <a href="/pagOceania"><img src="/estatico/res/pin.png" class="rpin" id="pin-oce" style="width: 2%;"> </a>
