--- a/src/app/views/pagAmCentral.marko
+++ b/src/app/views/pagAmCentral.marko
@@ -10,14 +10,7 @@
     <div class="wrapper">
     <nav>
         <ul class="menu">
-              <li><a href="/pagInicial">Home</a></li>
-              <li><a href="#">Maravilhas do mundo</a>
-                <ul>
-                     <li><a href="/pagModernidade">Moderno</a></li>
-                     <li><a href="/pagAntiguidade">Antigo</a></li>
-                     <li><a href="/pagNatural">Natural</a></li>
-                 </ul>
-           </li>
+              <li><a href="/estatico/pagInicial.marko">Home</a></li>
         </ul>
       </nav>
       <img src="/estatico/res/am central.png" style="width: 90%; height: 90%;">
